--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "MERN Stack curriculum",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "server": "nodemon app.js"
+    "server:debug": "nodemon --inspect app.js",
+    "server": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "george",
   "license": "ISC",
