--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
   "scripts": {
     "server:debug": "nodemon --inspect app.js",
     "server": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently 'npm run server' 'npm run frontend'"
   },
   "author": "george",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.4.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^4.2.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
